--- a/tau/src/css/profile/mobile/changeable/common/listview.less
+++ b/tau/src/css/profile/mobile/changeable/common/listview.less
@@ -387,6 +387,17 @@
 		}
 	}
 
+	.li-has-radio.li-has-right-radio .ui-radio {
+		margin-top: 0;
+		position: absolute;
+		right: 26 * @unit_base;
+		left: auto;
+
+		&:first-child {
+			right: 120 * @unit_base;
+		}
+	}
+
 	&.ui-colored-list {
 		position: relative;
 		transform: translate3d(0, 0, 0);
