--- a/tau/tests/UI-tests/app/mobile/css/style.css
+++ b/tau/tests/UI-tests/app/mobile/css/style.css
@@ -155,23 +155,6 @@
 	margin-top: -20px;
 }
 
-/********************* list have right checkbox ********************/
-
-.li-has-radio.li-has-right-radio .ui-radio {
-	position: absolute !important;
-	top: 35px;
-	right: 13px;
-	left: auto !important;
-}
-
-.li-has-radio.li-has-right-radio .ui-radio:first-child {
-	right: 60px;
-}
-
-.li-has-radio.li-has-right-radio .ui-radio {
-	margin-top: -20px;
-}
-
 /**************** with progress bar ************/
 .li-has-progress .ui-progress {
 	margin-top: 10px;
